# chart_bot

./: Cargo.toml  README.md  btcusd.csv
src/: chartbot.rs  lib.rs  main.rs
